--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ html, body {
 .main-box {
     display: flex;
     color: #F9FAF8;
-    background-image: url("./img/city.jpg");
+    background-image: url("./img/entrance.jpg");
     background-color: #1F2937;
     background-size:100%;
     align-items: center;
@@ -63,7 +63,7 @@ html, body {
     height: 100vh;
 }
 
-.main-box .content {
+.content {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -78,7 +78,7 @@ html, body {
     border-radius: 10px;
 }
 
-.main-box .info {
+.info {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -88,19 +88,25 @@ html, body {
   margin: 0;
 }
 
-.main-box .info p {
+.info p {
     font-size: large;
 }
 
-.main-box .img-box{
+.img-box{
     display: block;
+    padding: 2%;
 }
 
-.main-box .img-box img {
+.img-box img {
     max-width: auto;
     max-height: 350px;
     min-height: 150;
     border-radius: 10px;
+    transition: 0.3s;
+}
+
+.img-box img:hover {
+    transform:scale(1.05);
 }
 
 /* mid-box content stuff */
@@ -111,7 +117,7 @@ html, body {
     justify-content: center;
     align-items: center;
     background: rgb(181,23,158);
-    background: linear-gradient(180deg, rgba(108,12,94,1) 0%, rgba(181,23,158,1) 15%, rgba(72,12,168,1) 50%, rgba(72,149,239,1) 85%, rgba(35,69,108,1) 100%);}
+    background: linear-gradient(180deg, rgb(12, 57, 108) 0%, rgb(21, 54, 161) 15%, rgba(72,12,168,1) 50%, rgb(22, 129, 161) 100%);}
 
 .mid-box .title {
     display:block;
@@ -132,8 +138,14 @@ html, body {
     flex-direction: column;
     align-items: center;
     padding: 2%;
-    background-color: rgba(0, 0, 0, 0.60);
+    background-color: rgba(0, 0, 0, 0.00);
     border-radius: 10px;
+    width: 400px;
+    transition: 0.4s;
+}
+
+.mid-box .row-box:hover {
+    background-color: rgba(0, 0, 0, 0.60);
 }
 
 .mid-box .row-box img {
@@ -141,6 +153,11 @@ html, body {
     height: auto;
     min-height: 100px;
     border-radius: 10px;
+    transition: 0.4s;
+}
+
+.mid-box .row-box:hover img {
+    transform:scale(1.05);
 }
 
 /* quote and follow box */
@@ -149,32 +166,13 @@ html, body {
     align-items: center;
     justify-content: center;
     padding: 2% 10%;
-    background-image: url("./img/cpu.jpg");
+    background-image: url("./img/cityscape.jpg");
     background-color: #1F2937;
     background-size: 100%;
 }
 
-.award-box .content {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-flow:column;
-    gap: 20%;
-    margin: 0;
-    padding: 2%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.60);
-    backdrop-filter: blur(6px);
-    -webkit-backdrop-filter: blur(6px);
-    border-radius: 10px;
-}
-
-.award-box .row {
-    display: flex;
-    justify-content: space-around;
-    align-content: center;
-    padding: 2% 10%;
-    gap: 20%;
+.award-box .callnow {
+    font-size: 150%;
 }
 
 .award-box .row-box {
@@ -189,8 +187,15 @@ html, body {
     height: auto;
     min-height: 100px;
     border-radius: 10px;   
+    margin: 0px 45px;
 }
 
+span {
+    border: 2px white solid;
+    border-radius: 5px;
+    margin: 5px;
+    padding: 2px;
+}
 
 /* footer stuff */
 .footer {
